TryPython: Solve simultaneous equations.

--- a/try_ptyhon.ipynb
+++ b/try_ptyhon.ipynb
@@ -30,6 +30,38 @@
     "plt.grid(color='0.8')  # Show grid.\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{a: 1/2, b: 1/2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List 3-4 Solve simultaneous equations.\n",
+    "from sympy import Symbol, solve\n",
+    "\n",
+    "# Define expression.\n",
+    "a = Symbol('a')\n",
+    "b = Symbol('b')\n",
+    "ex1 = a + b - 1\n",
+    "ex2 = 5 * a + b - 3\n",
+    "\n",
+    "# Solving simultaneous equations.\n",
+    "print(solve((ex1, ex2)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
