TryPython: Find the intersection of two straight lines.

--- a/try_ptyhon.ipynb
+++ b/try_ptyhon.ipynb
@@ -83,9 +83,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "x = np.arange(-1, 6) # x-axis value.\n",
-    "y = 1/2 * x + 1/2 # Straight line 1\n",
-    "y2 = -2 * x + 7 # A straight line that goes straight to straight line 1.1.imag\n",
+    "x = np.arange(-1, 6)  # x-axis value.\n",
+    "y = 1 / 2 * x + 1 / 2  # Straight line 1\n",
+    "y2 = -2 * x + 7  # A straight line that goes straight to straight line 1.1.imag\n",
     "\n",
     "# Draw graph.\n",
     "plt.plot(x, y)\n",
@@ -93,6 +93,34 @@
     "plt.axis('equal')\n",
     "plt.grid(color='0.8')\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{x: 2.00000000000000, y: 3.00000000000000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import Symbol, solve\n",
+    "\n",
+    "x = Symbol('x')\n",
+    "y = Symbol('y')\n",
+    "ex1 = -3 / 2 * x + 6 - y\n",
+    "ex2 = 1 / 2 * x + 2 - y\n",
+    "print(solve((ex1, ex2)))"
    ],
    "metadata": {
     "collapsed": false,
