TryPython: Find the angle from the ratio of the two sides that sandwich the right angle.

--- a/try_ptyhon.ipynb
+++ b/try_ptyhon.ipynb
@@ -260,6 +260,35 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radian: 0.6435011087932844\n",
+      "Degrees: 36.86989764584402\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the angle from the ratio of the two sides that sandwich the right angle.\n",
+    "import numpy as np\n",
+    "\n",
+    "rad = np.arctan2(3, 4)\n",
+    "print(f'Radian: {rad}')\n",
+    "th = np.degrees(rad)\n",
+    "print(f'Degrees: {th}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
