Test: Distance from point to straight line

--- a/try_ptyhon.ipynb
+++ b/try_ptyhon.ipynb
@@ -378,6 +378,37 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "5.0"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Distance from point to straight line\n",
+    "import math\n",
+    "\n",
+    "x = 1\n",
+    "y = 6\n",
+    "a = 3\n",
+    "b = -4\n",
+    "c = -4\n",
+    "math.fabs(a * x + b * y + c) / math.sqrt(a ** 2 + b ** 2) # Calculate the distance between a point and a straight line"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
