--- a/try_ptyhon.ipynb
+++ b/try_ptyhon.ipynb
@@ -409,6 +409,38 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "8.999999999999996"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Heron's formula\n",
+    "import math\n",
+    "\n",
+    "x = [1, 3, 6]  # x coordinate(A, B, C in that order)\n",
+    "y = [5, 1, 4]  # y coordinate(A, B, C in that order)\n",
+    "a = math.sqrt((x[1] - x[0]) ** 2 + (y[1] - y[0]) ** 2)  # Length of side AB\n",
+    "b = math.sqrt((x[2] - x[1]) ** 2 + (y[2] - y[1]) ** 2)  # Length of side BC\n",
+    "c = math.sqrt((x[2] - x[0]) ** 2 + (y[2] - y[0]) ** 2)  # Length of side AC\n",
+    "s = (a + b + c) / 2\n",
+    "math.sqrt(s * (s - a) * (s - b) * (s - c)) # Heron's formula"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
