--- a/draw_figure_with_an_equation.ipynb
+++ b/draw_figure_with_an_equation.ipynb
@@ -401,7 +401,7 @@
     "a = 3\n",
     "b = -4\n",
     "c = -4\n",
-    "math.fabs(a * x + b * y + c) / math.sqrt(a ** 2 + b ** 2) # Calculate the distance between a point and a straight line"
+    "math.fabs(a * x + b * y + c) / math.sqrt(a ** 2 + b ** 2)  # Calculate the distance between a point and a straight line"
    ],
    "metadata": {
     "collapsed": false,
@@ -433,7 +433,7 @@
     "b = math.sqrt((x[2] - x[1]) ** 2 + (y[2] - y[1]) ** 2)  # Length of side BC\n",
     "c = math.sqrt((x[2] - x[0]) ** 2 + (y[2] - y[0]) ** 2)  # Length of side AC\n",
     "s = (a + b + c) / 2\n",
-    "math.sqrt(s * (s - a) * (s - b) * (s - c)) # Heron's formula"
+    "math.sqrt(s * (s - a) * (s - b) * (s - c))  # Heron's formula\n"
    ],
    "metadata": {
     "collapsed": false,
