TryPython: Perform vector operations in Python.

--- a/vector.ipynb
+++ b/vector.ipynb
@@ -25,6 +25,35 @@
     "print(th)\n",
     "print(f'Vector direction is about {round(th)} degrees.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 1]\n",
+      "[0 3]\n",
+      "[4 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array([2, 2]) # Component of vector a.\n",
+    "b = np.array([2, -1]) # Component of vector b.\n",
+    "print(a + b) # Vector a + Vector b\n",
+    "print(a - b)\n",
+    "print(2 * a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
