--- a/vector.ipynb
+++ b/vector.ipynb
@@ -54,6 +54,34 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{a: 2/3, b: 8/3}"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import Symbol, solve\n",
+    "a = Symbol('a')\n",
+    "b = Symbol('b')\n",
+    "ex1 = -1*a + b -2\n",
+    "ex2 = 2*a + b -4\n",
+    "solve((ex1, ex2))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
