TryPython: Seeking Taro's contribution.

--- a/vector.ipynb
+++ b/vector.ipynb
@@ -74,7 +74,32 @@
     "b = Symbol('b')\n",
     "ex1 = -1*a + b -2\n",
     "ex2 = 2*a + b -4\n",
-    "solve((ex1, ex2))\n"
+    "solve((ex1, ex2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taro's contribution is 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seeking Taro's contribution\n",
+    "import math\n",
+    "contribution = 10 * math.cos(math.radians(60))\n",
+    "print(f\"Taro's contribution is {round(contribution)}\")"
    ],
    "metadata": {
     "collapsed": false,
