TryPython: Find the angle between two straight lines.

--- a/vector.ipynb
+++ b/vector.ipynb
@@ -107,6 +107,61 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 -6] [4 2]\n",
+      "7.211102550927978 4.47213595499958\n",
+      "4\n",
+      "82.8749836510982\n",
+      "The angle between vector a and vector b is about 83.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List 4-1 Angle formed by straight lines AB and BC\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "# Coordinate\n",
+    "a = np.array([2, 7])\n",
+    "b = np.array([6, 1])\n",
+    "c = np.array([2, 3])\n",
+    "d = np.array([6, 5])\n",
+    "\n",
+    "# Components of vector a and vector b\n",
+    "va = b - a\n",
+    "vb = d - c\n",
+    "print(va, vb)\n",
+    "\n",
+    "# Vector magnitude\n",
+    "norm_a = np.linalg.norm(va)\n",
+    "norm_b = np.linalg.norm(vb)\n",
+    "print(norm_a, norm_b)\n",
+    "\n",
+    "# Vector inner product\n",
+    "dot_ab = np.dot(va, vb)\n",
+    "print(dot_ab)\n",
+    "\n",
+    "# Find the angle\n",
+    "cos_th = dot_ab / (norm_a * norm_b)\n",
+    "rad = math.acos(cos_th)\n",
+    "deg = math.degrees(rad)\n",
+    "print(deg)\n",
+    "print(f'The angle between vector a and vector b is about {round(deg)}.')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
