# Vector cross product.

--- a/vector.ipynb
+++ b/vector.ipynb
@@ -20,8 +20,9 @@
     "# Find the direction of the vector\n",
     "## Vector with component(2, 3)\n",
     "import math\n",
-    "radian = math.atan2(3, 2) # Find the angle.(Radian)\n",
-    "th = math.degrees(radian) # Convert to degree method\n",
+    "\n",
+    "radian = math.atan2(3, 2)  # Find the angle.(Radian)\n",
+    "th = math.degrees(radian)  # Convert to degree method\n",
     "print(th)\n",
     "print(f'Vector direction is about {round(th)} degrees.')"
    ]
@@ -42,9 +43,10 @@
    ],
    "source": [
     "import numpy as np\n",
-    "a = np.array([2, 2]) # Component of vector a.\n",
-    "b = np.array([2, -1]) # Component of vector b.\n",
-    "print(a + b) # Vector a + Vector b\n",
+    "\n",
+    "a = np.array([2, 2])  # Component of vector a.\n",
+    "b = np.array([2, -1])  # Component of vector b.\n",
+    "print(a + b)  # Vector a + Vector b\n",
     "print(a - b)\n",
     "print(2 * a)"
    ],
@@ -70,10 +72,11 @@
    ],
    "source": [
     "from sympy import Symbol, solve\n",
+    "\n",
     "a = Symbol('a')\n",
     "b = Symbol('b')\n",
-    "ex1 = -1*a + b -2\n",
-    "ex2 = 2*a + b -4\n",
+    "ex1 = -1 * a + b - 2\n",
+    "ex2 = 2 * a + b - 4\n",
     "solve((ex1, ex2))"
    ],
    "metadata": {
@@ -98,6 +101,7 @@
    "source": [
     "# Seeking Taro's contribution\n",
     "import math\n",
+    "\n",
     "contribution = 10 * math.cos(math.radians(60))\n",
     "print(f\"Taro's contribution is {round(contribution)}\")"
    ],
@@ -155,6 +159,34 @@
     "deg = math.degrees(rad)\n",
     "print(deg)\n",
     "print(f'The angle between vector a and vector b is about {round(deg)}.')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  4 -2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the outer product of the vector.\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([0, 1, 2])  # Ingredients of a\n",
+    "b = np.array([2, 0, 0])  # Ingredients of b\n",
+    "cross_product = np.cross(a, b)  # Find the cross product\n",
+    "print(cross_product)"
    ],
    "metadata": {
     "collapsed": false,
