# Find the outer product of the vector

--- a/vector.ipynb
+++ b/vector.ipynb
@@ -194,6 +194,35 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TryPython: Find the area of the triangle\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([2, 4]) # Ingredients of a\n",
+    "b = np.array([3, 1]) # Ingredients of b\n",
+    "cross_ab = np.cross(a, b) # Find the cross product\n",
+    "s = np.linalg.norm(cross_ab) # Find the magnitude of the vector(area of the parallelogram)\n",
+    "print(s / 2)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
