TryPython: Let's perform matrix multiplication

--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -20,10 +23,56 @@
     "# Matrix addition and subtraction in Python.\n",
     "import numpy as np\n",
     "\n",
-    "A = np.matrix([[50, 40], [10, 10]]) # Matrix A(morning)\n",
-    "B = np.matrix([[30, 100], [20, 15]]) # Matrix B(night)\n",
+    "A = np.matrix([[50, 40], [10, 10]])  # Matrix A(morning)\n",
+    "B = np.matrix([[30, 100], [20, 15]])  # Matrix B(night)\n",
     "A + B"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Find the real multiple of the matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.matrix([[80, 140], [30, 25]])  # Matrix A\n",
+    "0.8 * A"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "matrix([[540, 940],\n        [430, 730]])"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's perform matrix multiplication\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.matrix([[1, 3], [2, 1]])  # Matrix A\n",
+    "B = np.matrix([[150, 250], [130, 230]])  # Matrix B\n",
+    "A * B"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
