--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "matrix([[540, 940],\n        [430, 730]])"
+      "text/plain": "matrix([[361],\n        [362]])"
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,6 +65,13 @@
     "\n",
     "A = np.matrix([[1, 3], [2, 1]])  # Matrix A\n",
     "B = np.matrix([[150, 250], [130, 230]])  # Matrix B\n",
+    "A * B\n",
+    "# %%\n",
+    "# Multiplication of l x m matrix and m x n matrix\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.matrix([[1, 3], [2, 1]]) # Matrix A(2 x 2)\n",
+    "B = np.matrix([[145], [72]]) # Matrix B(2 x 1)\n",
     "A * B"
    ],
    "metadata": {
