TryPython: Multiplication of l x m matrix and m x n matrix

--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -48,15 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
-     "data": {
-      "text/plain": "matrix([[361],\n        [362]])"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3]\n",
+      " [2 1]]\n",
+      "[[1 3]\n",
+      " [2 1]]\n"
+     ]
     }
    ],
    "source": [
@@ -65,14 +67,43 @@
     "\n",
     "A = np.matrix([[1, 3], [2, 1]])  # Matrix A\n",
     "B = np.matrix([[150, 250], [130, 230]])  # Matrix B\n",
-    "A * B\n",
-    "# %%\n",
+    "A * B"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3]\n",
+      " [2 1]]\n",
+      "[[1 3]\n",
+      " [2 1]]\n"
+     ]
+    }
+   ],
+   "source": [
     "# Multiplication of l x m matrix and m x n matrix\n",
     "import numpy as np\n",
     "\n",
-    "A = np.matrix([[1, 3], [2, 1]]) # Matrix A(2 x 2)\n",
-    "B = np.matrix([[145], [72]]) # Matrix B(2 x 1)\n",
-    "A * B"
+    "A = np.matrix([[1, 3], [2, 1]])  # Matrix A(2 x 2)\n",
+    "B = np.matrix([[145], [72]])  # Matrix B(2 x 1)\n",
+    "# Matrix x unit matrix is calculated\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.matrix([[1, 3], [2, 1]])  # Matrix A\n",
+    "E = np.matrix([[1, 0], [0, 1]])  # Unit matrix E\n",
+    "print(A * E)\n",
+    "print(E * A)"
    ],
    "metadata": {
     "collapsed": false,
