--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -111,6 +111,42 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.  3.]\n",
+      " [ 2. -5.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "matrix([[1, 0],\n        [0, 0]])"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the inverse matrix\n",
+    "import numpy as np\n",
+    "A = np.matrix([[5, 3], [2, 1]]) # Matrix A\n",
+    "B = np.linalg.inv(A) # Find the inverse matrix(B)\n",
+    "print(B)\n",
+    "(A * B).astype(np.int64)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
