Inverse matrix and simultaneous equations

--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -147,6 +147,33 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "matrix([[ 3.],\n        [-2.]])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Solve simultaneous equations with the inverse matrix\n",
+    "A = np.matrix([[5, 3], [2, 1]]) # Matrix A(Matrix made up of unknown coefficients)\n",
+    "inv_A = np.linalg.inv(A) # Inverse matrix of matrix A\n",
+    "B = np.matrix([[9], [4]]) # Matrix B(Right side of simultaneous equations)\n",
+    "inv_A * B"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
