--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -174,6 +174,33 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "matrix([[6],\n        [7]])"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Multiplication of vector and matrix\n",
+    "import numpy as np\n",
+    "p = np.matrix([[3], [2]]) # Coordinates of point P\n",
+    "A = np.matrix([[2, 0], [1, 2]]) # Transformation matrix A\n",
+    "A * p"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
