Line symmetry on the y-axis

--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -255,6 +255,33 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "matrix([[-1, -3, -3],\n        [ 1,  1,  2]])"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Line symmetry on the y-axis\n",
+    "import numpy as np\n",
+    "p = np.matrix([[1, 3, 3], [1, 1, 2]]) # Vertex of triangle ABC\n",
+    "A = np.matrix([[-1, 0], [0, 1]]) # Transformation matrix A (Line symmetry on the y-axis)\n",
+    "A * p"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
