Point target at coordinate origin (0, 0)

--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -136,8 +136,9 @@
    "source": [
     "# Find the inverse matrix\n",
     "import numpy as np\n",
-    "A = np.matrix([[5, 3], [2, 1]]) # Matrix A\n",
-    "B = np.linalg.inv(A) # Find the inverse matrix(B)\n",
+    "\n",
+    "A = np.matrix([[5, 3], [2, 1]])  # Matrix A\n",
+    "B = np.linalg.inv(A)  # Find the inverse matrix(B)\n",
     "print(B)\n",
     "(A * B).astype(np.int64)"
    ],
@@ -163,9 +164,9 @@
    ],
    "source": [
     "# Solve simultaneous equations with the inverse matrix\n",
-    "A = np.matrix([[5, 3], [2, 1]]) # Matrix A(Matrix made up of unknown coefficients)\n",
-    "inv_A = np.linalg.inv(A) # Inverse matrix of matrix A\n",
-    "B = np.matrix([[9], [4]]) # Matrix B(Right side of simultaneous equations)\n",
+    "A = np.matrix([[5, 3], [2, 1]])  # Matrix A(Matrix made up of unknown coefficients)\n",
+    "inv_A = np.linalg.inv(A)  # Inverse matrix of matrix A\n",
+    "B = np.matrix([[9], [4]])  # Matrix B(Right side of simultaneous equations)\n",
     "inv_A * B"
    ],
    "metadata": {
@@ -191,8 +192,9 @@
    "source": [
     "## Multiplication of vector and matrix\n",
     "import numpy as np\n",
-    "p = np.matrix([[3], [2]]) # Coordinates of point P\n",
-    "A = np.matrix([[2, 0], [1, 2]]) # Transformation matrix A\n",
+    "\n",
+    "p = np.matrix([[3], [2]])  # Coordinates of point P\n",
+    "A = np.matrix([[2, 0], [1, 2]])  # Transformation matrix A\n",
     "A * p"
    ],
    "metadata": {
@@ -272,8 +274,37 @@
    "source": [
     "# Line symmetry on the y-axis\n",
     "import numpy as np\n",
-    "p = np.matrix([[1, 3, 3], [1, 1, 2]]) # Vertex of triangle ABC\n",
-    "A = np.matrix([[-1, 0], [0, 1]]) # Transformation matrix A (Line symmetry on the y-axis)\n",
+    "\n",
+    "p = np.matrix([[1, 3, 3], [1, 1, 2]])  # Vertex of triangle ABC\n",
+    "A = np.matrix([[-1, 0], [0, 1]])  # Transformation matrix A (Line symmetry on the y-axis)\n",
+    "A * p"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "matrix([[-1, -3, -3],\n        [-1, -1, -2]])"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Point target at coordinate origin (0, 0)\n",
+    "import numpy as np\n",
+    "\n",
+    "p = np.matrix([[1, 3, 3], [1, 1, 2]])  # Vertex of triangle ABC\n",
+    "A = np.matrix([[-1, 0], [0, -1]])  # Transformation matrix(point target at coordinate origin(0, 0)\n",
     "A * p"
    ],
    "metadata": {
