--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -313,6 +313,34 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "matrix([[-1, -1,  0],\n        [ 1,  3,  3]])"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Line symmetry to the straight line y = x\n",
+    "import numpy as np\n",
+    "\n",
+    "p = np.matrix([[1, 3, 3], [-1, -1, 0]]) # 三角形 ABC の頂点\n",
+    "A = np.matrix([[0, 1], [1, 0]]) # 変換行列A(直線 y = x に線対称)\n",
+    "A * p"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
