Document: 場合の数の求め方

--- a/set_and_probability.ipynb
+++ b/set_and_probability.ipynb
@@ -97,6 +97,31 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1から10の自然数の中で「2の倍数」または、「3の倍数」は7つある。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TryPython 集合の要素数\n",
+    "A = {2, 4, 6, 8, 10} # 集合A (1から10の自然数の中で2の倍数)を定義\n",
+    "B = {3, 6, 9} # 集合B (1から10の自然数の中で3の倍数)を定義\n",
+    "print(f'1から10の自然数の中で「2の倍数」または、「3の倍数」は{len(A | B)}つある。')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
