--- a/set_and_probability.ipynb
+++ b/set_and_probability.ipynb
@@ -122,6 +122,95 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num の中から3個を選ぶ順列の集合の要素数は、60\n",
+      "(5, 4, 2)\n",
+      "(1, 5, 4)\n",
+      "(2, 1, 3)\n",
+      "(4, 2, 1)\n",
+      "(2, 5, 1)\n",
+      "(3, 2, 1)\n",
+      "(4, 5, 3)\n",
+      "(2, 5, 4)\n",
+      "(5, 2, 1)\n",
+      "(3, 2, 4)\n",
+      "(1, 2, 5)\n",
+      "(1, 4, 2)\n",
+      "(3, 1, 2)\n",
+      "(3, 4, 1)\n",
+      "(3, 1, 5)\n",
+      "(1, 4, 5)\n",
+      "(5, 2, 4)\n",
+      "(4, 1, 2)\n",
+      "(4, 1, 5)\n",
+      "(2, 4, 5)\n",
+      "(4, 3, 2)\n",
+      "(4, 3, 5)\n",
+      "(5, 3, 2)\n",
+      "(5, 1, 2)\n",
+      "(5, 4, 1)\n",
+      "(3, 5, 2)\n",
+      "(1, 5, 3)\n",
+      "(2, 1, 5)\n",
+      "(4, 2, 3)\n",
+      "(4, 5, 2)\n",
+      "(2, 5, 3)\n",
+      "(1, 2, 4)\n",
+      "(5, 2, 3)\n",
+      "(3, 1, 4)\n",
+      "(1, 3, 2)\n",
+      "(1, 3, 5)\n",
+      "(4, 3, 1)\n",
+      "(2, 4, 1)\n",
+      "(2, 3, 5)\n",
+      "(5, 1, 4)\n",
+      "(5, 3, 1)\n",
+      "(5, 4, 3)\n",
+      "(3, 5, 1)\n",
+      "(1, 5, 2)\n",
+      "(5, 3, 4)\n",
+      "(3, 5, 4)\n",
+      "(2, 1, 4)\n",
+      "(4, 2, 5)\n",
+      "(4, 5, 1)\n",
+      "(1, 2, 3)\n",
+      "(1, 3, 4)\n",
+      "(3, 2, 5)\n",
+      "(1, 4, 3)\n",
+      "(3, 4, 2)\n",
+      "(3, 4, 5)\n",
+      "(2, 3, 4)\n",
+      "(4, 1, 3)\n",
+      "(2, 4, 3)\n",
+      "(2, 3, 1)\n",
+      "(5, 1, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TryPython 順列を求める Program\n",
+    "import itertools\n",
+    "num = {1, 2, 3, 4, 5} # Data を定義\n",
+    "A = set(itertools.permutations(num, 3))\n",
+    "print(f'num の中から3個を選ぶ順列の集合の要素数は、{len(A)}')\n",
+    "\n",
+    "for a in A:\n",
+    "    print(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
