--- a/set_and_probability.ipynb
+++ b/set_and_probability.ipynb
@@ -67,28 +67,28 @@
     "\n",
     "# 積集合\n",
     "A = {2, 4, 6, 8, 10}  # 集合A を定義\n",
-    "B = {3, 6, 9} # 集合B を定義\n",
-    "print(f'A集合 と 集合B の積集合は、{ A & B }。\\n')\n",
+    "B = {3, 6, 9}  # 集合B を定義\n",
+    "print(f'A集合 と 集合B の積集合は、{A & B}。\\n')\n",
     "\n",
     "# 和集合\n",
-    "A = {2, 4, 6, 8, 10} # 集合A を定義\n",
-    "B = {3, 6, 9} # 集合B を定義\n",
+    "A = {2, 4, 6, 8, 10}  # 集合A を定義\n",
+    "B = {3, 6, 9}  # 集合B を定義\n",
     "print(f'A と B の和集合は、{A | B}。\\n')\n",
     "\n",
     "# 差集合\n",
-    "A = {2, 4, 6, 8, 10} # 集合A を定義\n",
-    "B = {3, 6, 9} # 集合B を定義\n",
+    "A = {2, 4, 6, 8, 10}  # 集合A を定義\n",
+    "B = {3, 6, 9}  # 集合B を定義\n",
     "print(f'集合A から集合B の差集合は、{A - B}。')\n",
     "print(f'集合B から集合A の差集合は、{B - A}。\\n')\n",
     "\n",
     "# 対象差\n",
-    "A = {2, 4, 6, 8, 10} # 集合A を定義\n",
-    "B = {3, 6, 9} # 集合B を定義\n",
+    "A = {2, 4, 6, 8, 10}  # 集合A を定義\n",
+    "B = {3, 6, 9}  # 集合B を定義\n",
     "print(f'集合A と集合B の対象差は、{A ^ B}。\\n')\n",
     "\n",
     "# 空集合\n",
-    "X = {1, 2, 3} # 集合X を定義\n",
-    "Y = {4, 5, 6} # 集合Y を定義\n",
+    "X = {1, 2, 3}  # 集合X を定義\n",
+    "Y = {4, 5, 6}  # 集合Y を定義\n",
     "X & Y"
    ],
    "metadata": {
@@ -112,8 +112,8 @@
    ],
    "source": [
     "# TryPython 集合の要素数\n",
-    "A = {2, 4, 6, 8, 10} # 集合A (1から10の自然数の中で2の倍数)を定義\n",
-    "B = {3, 6, 9} # 集合B (1から10の自然数の中で3の倍数)を定義\n",
+    "A = {2, 4, 6, 8, 10}  # 集合A (1から10の自然数の中で2の倍数)を定義\n",
+    "B = {3, 6, 9}  # 集合B (1から10の自然数の中で3の倍数)を定義\n",
     "print(f'1から10の自然数の中で「2の倍数」または、「3の倍数」は{len(A | B)}つある。')"
    ],
    "metadata": {
@@ -198,9 +198,190 @@
    "source": [
     "# TryPython 順列を求める Program\n",
     "import itertools\n",
-    "num = {1, 2, 3, 4, 5} # Data を定義\n",
+    "\n",
+    "num = {1, 2, 3, 4, 5}  # Data を定義\n",
     "A = set(itertools.permutations(num, 3))\n",
     "print(f'num の中から3個を選ぶ順列の集合の要素数は、{len(A)}')\n",
+    "\n",
+    "for a in A:\n",
+    "    print(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5の階乗は、120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TryPython 階乗の計算は factorial()関数で\n",
+    "import math\n",
+    "\n",
+    "fac = math.factorial(5)  # 5の階乗を求める\n",
+    "print(f'5の階乗は、{fac}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aの要素数は、125\n",
+      "(5, 3, 3)\n",
+      "(5, 4, 2)\n",
+      "(2, 2, 5)\n",
+      "(3, 2, 1)\n",
+      "(5, 2, 4)\n",
+      "(5, 5, 3)\n",
+      "(3, 1, 5)\n",
+      "(3, 3, 2)\n",
+      "(4, 1, 2)\n",
+      "(2, 4, 5)\n",
+      "(5, 3, 5)\n",
+      "(5, 4, 4)\n",
+      "(3, 5, 2)\n",
+      "(4, 4, 3)\n",
+      "(1, 3, 2)\n",
+      "(5, 5, 5)\n",
+      "(3, 3, 4)\n",
+      "(4, 1, 4)\n",
+      "(4, 3, 1)\n",
+      "(1, 1, 2)\n",
+      "(5, 1, 1)\n",
+      "(1, 5, 2)\n",
+      "(3, 5, 4)\n",
+      "(4, 2, 2)\n",
+      "(4, 4, 5)\n",
+      "(1, 3, 4)\n",
+      "(1, 4, 3)\n",
+      "(3, 4, 5)\n",
+      "(1, 1, 4)\n",
+      "(5, 1, 3)\n",
+      "(1, 5, 4)\n",
+      "(2, 2, 2)\n",
+      "(4, 2, 4)\n",
+      "(2, 5, 4)\n",
+      "(5, 2, 1)\n",
+      "(3, 1, 2)\n",
+      "(1, 4, 5)\n",
+      "(2, 4, 2)\n",
+      "(5, 1, 5)\n",
+      "(5, 3, 2)\n",
+      "(5, 4, 1)\n",
+      "(2, 2, 4)\n",
+      "(5, 2, 3)\n",
+      "(1, 2, 1)\n",
+      "(3, 1, 4)\n",
+      "(3, 3, 1)\n",
+      "(3, 2, 3)\n",
+      "(5, 4, 3)\n",
+      "(3, 5, 1)\n",
+      "(2, 1, 1)\n",
+      "(4, 4, 2)\n",
+      "(4, 5, 1)\n",
+      "(5, 2, 5)\n",
+      "(1, 3, 1)\n",
+      "(1, 2, 3)\n",
+      "(3, 3, 3)\n",
+      "(3, 2, 5)\n",
+      "(3, 4, 2)\n",
+      "(2, 3, 1)\n",
+      "(4, 3, 3)\n",
+      "(5, 4, 5)\n",
+      "(1, 5, 1)\n",
+      "(3, 5, 3)\n",
+      "(2, 1, 3)\n",
+      "(2, 5, 1)\n",
+      "(4, 4, 4)\n",
+      "(4, 5, 3)\n",
+      "(1, 3, 3)\n",
+      "(1, 2, 5)\n",
+      "(1, 4, 2)\n",
+      "(3, 3, 5)\n",
+      "(3, 4, 4)\n",
+      "(2, 3, 3)\n",
+      "(4, 3, 5)\n",
+      "(2, 1, 5)\n",
+      "(2, 5, 3)\n",
+      "(3, 1, 1)\n",
+      "(4, 5, 5)\n",
+      "(1, 4, 4)\n",
+      "(5, 5, 2)\n",
+      "(4, 1, 1)\n",
+      "(2, 3, 5)\n",
+      "(2, 4, 4)\n",
+      "(5, 3, 4)\n",
+      "(2, 5, 5)\n",
+      "(5, 2, 2)\n",
+      "(3, 1, 3)\n",
+      "(3, 2, 2)\n",
+      "(5, 5, 4)\n",
+      "(4, 1, 3)\n",
+      "(1, 1, 1)\n",
+      "(4, 4, 1)\n",
+      "(4, 2, 1)\n",
+      "(1, 2, 2)\n",
+      "(3, 2, 4)\n",
+      "(3, 4, 1)\n",
+      "(4, 1, 5)\n",
+      "(4, 3, 2)\n",
+      "(1, 1, 3)\n",
+      "(5, 1, 2)\n",
+      "(1, 5, 3)\n",
+      "(2, 1, 2)\n",
+      "(2, 2, 1)\n",
+      "(3, 5, 5)\n",
+      "(4, 2, 3)\n",
+      "(4, 5, 2)\n",
+      "(1, 2, 4)\n",
+      "(1, 4, 1)\n",
+      "(3, 4, 3)\n",
+      "(1, 3, 5)\n",
+      "(2, 3, 2)\n",
+      "(2, 4, 1)\n",
+      "(4, 3, 4)\n",
+      "(1, 1, 5)\n",
+      "(5, 1, 4)\n",
+      "(5, 3, 1)\n",
+      "(1, 5, 5)\n",
+      "(2, 1, 4)\n",
+      "(2, 2, 3)\n",
+      "(2, 5, 2)\n",
+      "(4, 2, 5)\n",
+      "(4, 5, 4)\n",
+      "(5, 5, 1)\n",
+      "(2, 3, 4)\n",
+      "(2, 4, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TryPython 重複順列を Program で求める\n",
+    "import itertools\n",
+    "num = {1, 2, 3, 4, 5} # Data を定義\n",
+    "A = set(itertools.product(num, num, num)) # num の中から3個を選ぶ重複順列\n",
+    "print(f'Aの要素数は、{len(A)}')\n",
     "\n",
     "for a in A:\n",
     "    print(a)"
