--- a/set_and_probability.ipynb
+++ b/set_and_probability.ipynb
@@ -379,12 +379,59 @@
    "source": [
     "# TryPython 重複順列を Program で求める\n",
     "import itertools\n",
-    "num = {1, 2, 3, 4, 5} # Data を定義\n",
-    "A = set(itertools.product(num, num, num)) # num の中から3個を選ぶ重複順列\n",
+    "\n",
+    "num = {1, 2, 3, 4, 5}  # Data を定義\n",
+    "A = set(itertools.product(num, num, num))  # num の中から3個を選ぶ重複順列\n",
     "print(f'Aの要素数は、{len(A)}')\n",
     "\n",
     "for a in A:\n",
     "    print(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num の中から３個を選ぶ組み合わせは、10。\n",
+      "(2, 4, 5)\n",
+      "(1, 3, 5)\n",
+      "(1, 2, 3)\n",
+      "(1, 3, 4)\n",
+      "(2, 3, 5)\n",
+      "(3, 4, 5)\n",
+      "(2, 3, 4)\n",
+      "(1, 2, 5)\n",
+      "(1, 4, 5)\n",
+      "(1, 2, 4)\n",
+      "サイコロから２個を選ぶ組み合わせは15通り。\n",
+      "２つのサイコロをふった時の目の出方は21通り。\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "num = {1, 2, 3, 4, 5}  # Data を定義\n",
+    "A = set(itertools.combinations(num, 3))\n",
+    "print(f'num の中から３個を選ぶ組み合わせは、{len(A)}。')\n",
+    "for a in A:\n",
+    "    print(a)\n",
+    "\n",
+    "dice = {1, 2, 3, 4, 5, 6} # サイコロの目を定義\n",
+    "A = set(itertools.combinations(dice, 2))\n",
+    "print(f'サイコロから２個を選ぶ組み合わせは{len(A)}通り。')\n",
+    "# ２つのサイコロの目が小名氏になるのは、6通り。この２つの事象は同時に起こることがないので和の法則を使う。\n",
+    "print(f'２つのサイコロをふった時の目の出方は{len(A) + 6}通り。')"
    ],
    "metadata": {
     "collapsed": false,
