Practice: すべての事象が起こる確率

--- a/set_and_probability.ipynb
+++ b/set_and_probability.ipynb
@@ -427,11 +427,69 @@
     "for a in A:\n",
     "    print(a)\n",
     "\n",
-    "dice = {1, 2, 3, 4, 5, 6} # サイコロの目を定義\n",
+    "dice = {1, 2, 3, 4, 5, 6}  # サイコロの目を定義\n",
     "A = set(itertools.combinations(dice, 2))\n",
     "print(f'サイコロから２個を選ぶ組み合わせは{len(A)}通り。')\n",
     "# ２つのサイコロの目が小名氏になるのは、6通り。この２つの事象は同時に起こることがないので和の法則を使う。\n",
     "print(f'２つのサイコロをふった時の目の出方は{len(A) + 6}通り。')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.168\n",
+      "1 0.1675\n",
+      "2 0.1685\n",
+      "3 0.1617\n",
+      "4 0.1649\n",
+      "5 0.1711\n",
+      "6 0.1663\n",
+      "-------------\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List6-1 １の目が出る確率\n",
+    "import random\n",
+    "\n",
+    "# サイコロを振る\n",
+    "cnt = 0  # １が出た回数\n",
+    "for i in range(10_000):\n",
+    "    dice = random.randint(1, 6)\n",
+    "    if dice == 1:\n",
+    "        cnt += 1\n",
+    "\n",
+    "# 確率を求める\n",
+    "p = cnt / 10_000\n",
+    "print(p)\n",
+    "\n",
+    "# List6-2 すべての事象が起こる確率\n",
+    "\n",
+    "# サイコロをふる\n",
+    "hist = [0] * 7\n",
+    "for i in range(10_000):\n",
+    "    dice = random.randint(1, 6)\n",
+    "    hist[dice] += 1\n",
+    "\n",
+    "# 確率を求める\n",
+    "p = [0] * 7\n",
+    "for i in range(1, 7):\n",
+    "    p[i] = hist[i] / 10_000\n",
+    "    print(i, p[i])\n",
+    "# 確率を合計\n",
+    "print('-------------\\n' + str(sum(p)))"
    ],
    "metadata": {
     "collapsed": false,
