Practice: 積の法を宇と和の法則

--- a/set_and_probability.ipynb
+++ b/set_and_probability.ipynb
@@ -497,6 +497,38 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/6\n",
+      "３番目にくじを引く人が当たる確率は、2/7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TryPython ３番目にくじを引く人が当たる確率を求める\n",
+    "from fractions import Fraction\n",
+    "\n",
+    "print(Fraction(1, 6))\n",
+    "\n",
+    "x = Fraction(2, 7) * Fraction(5, 6) * Fraction(1, 5)  # 事象X（A 当たり -> B はずれ -> C 当たり）\n",
+    "y = Fraction(5, 7) * Fraction(2, 6) * Fraction(1, 5)  # 事象Y（A はずれ -> B はずれ -> C 当たり）\n",
+    "z = Fraction(5, 7) * Fraction(4, 6) * Fraction(2, 5)  # 事象Z（A はずれ -> B はずれ -> C 当たり）\n",
+    "p = x + y + z\n",
+    "print(f'３番目にくじを引く人が当たる確率は、{p}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
