Practice: 平均値、中央値、最頻値を求める Program

--- a/statistics_and_random_numbers.ipynb
+++ b/statistics_and_random_numbers.ipynb
@@ -37,6 +37,44 @@
     "dat['数学'][0]\n",
     "dat['数学']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "平均値 70.0\n",
+      "中央値 85.0\n",
+      "最頻値 95\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List 7-2 平均値、中央値、最頻値を求める\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# score.csv の読み込み\n",
+    "dat = pd.read_csv('sample_data/score.csv', encoding='SHIFT-JIS')\n",
+    "\n",
+    "# 平均値、中央値\n",
+    "print('平均値', np.mean(dat['数学']))\n",
+    "print('中央値', np.median(dat['数学']))\n",
+    "\n",
+    "# 最頻値\n",
+    "bincnt = np.bincount(dat['数学']) # 同じ値の個数を数える。\n",
+    "mode = np.argmax(bincnt) # bincnt の中で最も大きな値を取得\n",
+    "print('最頻値', mode)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
