Practice: 相関係数を計算する

--- a/statistics_and_random_numbers.ipynb
+++ b/statistics_and_random_numbers.ipynb
@@ -230,6 +230,36 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.8276853164886502"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TryPython 相関係数を計算する\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "dat = pd.read_csv('sample_data/score.csv', encoding='SHIFT-JIS')\n",
+    "correlation = np.corrcoef(dat['数学'], dat['理科'])\n",
+    "\n",
+    "correlation[0, 1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
