Practice: 棒 Graph の幅と誤差の関係

--- a/differential_and_integral.ipynb
+++ b/differential_and_integral.ipynb
@@ -112,6 +112,48 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "52.5\n",
+      "50.5\n",
+      "50.05\n",
+      "50.00500000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List 8-4 棒の太さを変えて面積を求める\n",
+    "\n",
+    "def calc_area(dx):\n",
+    "    h = 0 # 棒の高さ\n",
+    "    area = 0 # 面積\n",
+    "    cnt = int(10 / dx) # 棒の数\n",
+    "    for i in range(1, cnt + 1):\n",
+    "        h = i * dx # 高さを求める\n",
+    "        s = h * dx # 棒の面積を求める\n",
+    "        area += s # 棒の面積を積算する\n",
+    "    return area\n",
+    "\n",
+    "print(calc_area(1))\n",
+    "print(calc_area(0.5))\n",
+    "print(calc_area(0.1))\n",
+    "print(calc_area(0.01))\n",
+    "print(calc_area(0.001))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
