Document: 曲線の接線

--- a/differential_and_integral.ipynb
+++ b/differential_and_integral.ipynb
@@ -146,7 +146,7 @@
     "print(calc_area(0.5))\n",
     "print(calc_area(0.1))\n",
     "print(calc_area(0.01))\n",
-    "print(calc_area(0.001))\n"
+    "print(calc_area(0.001))"
    ],
    "metadata": {
     "collapsed": false,
