Practice: Toilet paper の長さを求める

--- a/differential_and_integral.ipynb
+++ b/differential_and_integral.ipynb
@@ -258,7 +258,44 @@
     "            dst_img.putpixel((x, y), (0, 0, 0))\n",
     "\n",
     "plt.imshow(dst_img)\n",
-    "plt.show()\n"
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(65.97344572538566, 7.324523845818128e-13)\n",
+      "5997.58597503506\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List 8-7 Toilet paper の長さを求める\n",
+    "from scipy import integrate\n",
+    "import math\n",
+    "\n",
+    "# 半径 r の円の円周を求める\n",
+    "def calc_area(r):\n",
+    "    return 2 * math.pi * r\n",
+    "\n",
+    "# 半径2~5の区間の円周の合計\n",
+    "s = integrate.quad(calc_area, 2, 5)\n",
+    "print(s)\n",
+    "\n",
+    "# Toilet paper の長さ\n",
+    "x = s[0] / 0.011\n",
+    "print(x)"
    ],
    "metadata": {
     "collapsed": false,
